# wires-bot

./: .gitignore  config.toml.example  flake.nix  main.py  pyproject.toml
exts/: emojis.py
nix/: dpy-paginator.nix  module.nix
utils/: bot.py  helpers.py  paginators.py  transformers.py  views.py
wires/: __init__.py  __main__.py  bot.py  errors.py  transformers.py
wires/exts/: emojis.py
