[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wires"
version = "0.1.0"
dependencies = [
    "discord.py[speed] @ git+https://github.com/rapptz/discord.py",
    "discord-py-paginators @ git+https://github.com/Soheab/discord-py-paginators",
    "jishaku>=2.5.0,<2.6.0",
    "tomli>=2.0.1,<2.1.0 ; python_version<'3.11'",
]

[tool.pyright]
typeCheckingMode = "strict"
