[project]
name = "wires"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "discord.py[speed] @ git+https://github.com/rapptz/discord.py",
    "discord-py-paginators @ git+https://github.com/Soheab/discord-py-paginators",
    "jishaku>=2.5.0,<2.6.0",
    "tomli>=2.0.1,<2.1.0 ; python_version<'3.11'",
]

[project.scripts]
wires = "wires.__main__:run"

[tool.pyright]
typeCheckingMode = "strict"


# I hate you and I never want to deal
# with you ever again!
[tool.setuptools.packages.find]
where = [ "." ]
include = [ "*" ]
